Few tweaks, found the right background colour.

--- a/index.html
+++ b/index.html
@@ -9,67 +9,48 @@
 
 		<body>
 			<div class="topnav">
-				<a class="active" href="#home">Home</a>
-				<a href="./hats.html">Hats</a>
-				<a href="./collectableFigures.html">Collectible Figures</a>
-				<a href="./commissions.html">Commissions</a>
-				<a href="./contact.html">Contact</a>
-				<a href="./gallery.html">Gallery</a>
+		    <a class="active" 	href="./index.html">Home</a>
+		    <a href="./hats.html">Hats</a>
+		    <a href="./collectableFigures.html">Collectible Figures</a>
+		    <a href="./commissions.html">Commissions</a>
+		    <a href="./contact.html">Contact</a>
+		    <a href="./gallery.html">Gallery</a>
 			</div>
-			<div> <!---banner--->
-				<img src="./Buttons/aabanner2.jpg" id="banner">
-			</div>
-			<div class="tagline">
-				<h1>Hand Made Crochet Hats and Figures</h1>
-			</div>
-			<div class="welcomeContainer">
-			<p class="welcome">Pam's Happy Hats offer a wide variety of hats and
-				accessories in sizes from newborn to adult.  We have designs ranging
-				from Animal to Zebra. We also offer bespoke designs to your
-				<a href="./commissions.html">personal specifications</a> and everything
-				can be made in any size you require.
-			</p>
-			<br>
-			<br>
-			<p class="welcome">We also offer an ever expanding range of
-				<a href="./collectableFigures.html">cute collectible figures</a> who
-				need rehoming.
-			</p>
-			<br>
-			<br>
-			<p class="welcome">Come to us for all your Happy Hat needs and we will be
-				happy to help
-			</p>
-		</div>
-		<p align="center">
-		  <script language="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" async"async""">
-		</script>
-		  <ins class="adsbygoogle"
-		     style="display:inline-block;width:120px;height:240px"
-		     data-ad-client="ca-pub-9454932042094762"
-		     data-ad-slot="6588600848"></ins>
-		  <script>
-		(adsbygoogle = window.adsbygoogle || []).push({});
-		</script>
-		  ></p>
+
+				<div> <!---banner--->
+					<img src="./Buttons/aabanner2.jpg" id="banner">
+				</div>
+
+				<div class="tagline">
+					<h1>Hand Made Crochet Hats and Figures</h1>
+				</div>
+
+				<div class="welcomeContainer">
+					<p class="welcome">Pam's Happy Hats offer a wide variety of hats and
+					accessories in sizes from newborn to adult.  We have designs ranging
+					from Animal to Zebra. We also offer bespoke designs to your
+					<a href="./commissions.html">personal specifications</a> and everything
+					can be made in any size you require.
+					</p>
+
+					<p class="welcome">We also offer an ever expanding range of
+					<a href="./collectableFigures.html">cute collectible figures</a> who
+					need rehoming.
+					</p>
+
+					<p class="welcome">Come to us for all your Happy Hat needs and we will be
+					happy to help
+					</p>
+
+					<script language="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" async"async""">
+					</script>
+			  	<ins class="adsbygoogle"
+			     style="display:inline-block;width:120px;height:240px"
+			     data-ad-client="ca-pub-9454932042094762"
+			     data-ad-slot="6588600848"></ins>
+			  		<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+						
 		</body>
 	</html>
-
-	<!--
-<p align="center" class="style6">Come to us for all your Happy Hat needs and we
-  will be happy to help.</p>
-<p align="center"><span class="style6"><a href="mailto:pam@pamshappyhats.co.uk">E
-  Mail Us</a></span></p>
-<p align="center">
-  <script language="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" async"async""">
-</script>
-  <ins class="adsbygoogle"
-     style="display:inline-block;width:120px;height:240px"
-     data-ad-client="ca-pub-9454932042094762"
-     data-ad-slot="6588600848"></ins>
-  <script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-  ></p>
-</body>
-</html>
