Add some example products to hats page, started styling.

--- a/hats.html
+++ b/hats.html
@@ -16,8 +16,41 @@
     <a href="./gallery.html">Gallery</a>
   </div>
 
-  <div> <!---banner--->
+  <div class="banner"> <!---banner--->
     <img src="./Buttons/aabanner2.jpg" id="banner">
+  </div>
+
+  <div class="products">
+    <div class ="product">
+      <img src="./Thumbs/Mushroom HH168.jpg" alt="">
+      <h4>Mario Mushroom</h4>
+      <h4>From £7.00</h4>
+    </div>
+
+    <div class="product">
+      <img src="./Thumbs/Tigger HH170.jpg" alt="">
+      <h4>Tigger</h4>
+      <h4>From £7.00</h4>
+    </div>
+
+    <div class="product">
+      <img src="./Thumbs/Poodle HH163.jpg" alt="">
+      <h4>Poodle</h4>
+      <h4>From £7.00</h4>
+    </div>
+
+    <div class="product">
+      <img src="./Thumbs/Angry Bird HH165.jpg" alt="">
+      <h4>Angry Bird</h4>
+      <h4>From £7.00</h4>
+    </div>
+
+    <div class="product">
+      <img src="./Thumbs/America HH167.jpg" alt="">
+      <h4>America</h4>
+      <h4>From £7.00</h4>
+    </div>
+
   </div>
 
 
