--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		    <a href="./gallery.html">Gallery</a>
 			</div>
 
-				<div> <!---banner--->
+				<div class="banner"> <!---banner--->
 					<img src="./Buttons/aabanner2.jpg" id="banner">
 				</div>
 
@@ -39,7 +39,7 @@
 					</p>
 
 					<p class="welcome">Come to us for all your Happy Hat needs and we will be
-					happy to help
+					happy to help!
 					</p>
 
 					<script language="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" async"async""">
@@ -51,6 +51,6 @@
 			  		<script>
 						(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
-						
+
 		</body>
 	</html>
