--- a/hats.html
+++ b/hats.html
@@ -21,37 +21,12 @@
   </div>
 
   <div class="products">
-    <div class ="product">
-      <img src="./Thumbs/Mushroom HH168.jpg" alt="">
-      <h4>Mario Mushroom</h4>
-      <h4>From £7.00</h4>
-    </div>
-
-    <div class="product">
-      <img src="./Thumbs/Tigger HH170.jpg" alt="">
-      <h4>Tigger</h4>
-      <h4>From £7.00</h4>
-    </div>
-
-    <div class="product">
-      <img src="./Thumbs/Poodle HH163.jpg" alt="">
-      <h4>Poodle</h4>
-      <h4>From £7.00</h4>
-    </div>
-
-    <div class="product">
-      <img src="./Thumbs/Angry Bird HH165.jpg" alt="">
-      <h4>Angry Bird</h4>
-      <h4>From £7.00</h4>
-    </div>
-
-    <div class="product">
-      <img src="./Thumbs/America HH167.jpg" alt="">
-      <h4>America</h4>
-      <h4>From £7.00</h4>
-    </div>
+  
 
   </div>
 
+  <script src="./js/jquery-3.3.1.min.js"> </script>
+  <script src="./js/script.js"></script>
+</body>
 
 </html>
