--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 					happy to help!
 					</p>
 
+					<script src="./js/jquery-3.3.1.min.js"> </script>
 					<script language="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" async"async""">
 					</script>
 			  	<ins class="adsbygoogle"
