added in search box

--- a/hats.html
+++ b/hats.html
@@ -20,9 +20,12 @@
     <img src="./Buttons/aabanner2.jpg" id="banner">
   </div>
 
-  <div class="products">
-  
+  <div>
+    <input type="text" class="search"></input>
+    <input type="button" class="searchButton" value="Search"></input>
+  </div>
 
+  <div class="products">
   </div>
 
   <script src="./js/jquery-3.3.1.min.js"> </script>
