--- a/commissions.html
+++ b/commissions.html
@@ -36,6 +36,8 @@
             our range.  Below are images of some of our commissions to date.
 					</p>
 
+          <img name="slide" width="400" height="200">
+
 					<script src="./js/jquery-3.3.1.min.js"> </script>
 					<script language="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" async"async""">
 					</script>
