Trying a different approach to slideshow on commissions page.  Still not working!

--- a/commissions.html
+++ b/commissions.html
@@ -36,18 +36,24 @@
             our range.  Below are images of some of our commissions to date.
 					</p>
 
-          <img class="slide" width="400" height="200">
+          <div class="carouselbox active">
+						<div class="buttons">
+							<button class="prev">
+								<span class="offscreen">Previous</span>
+							</button>
+							<button class="next">
+								<span class="offscreen">Next</span>
+							</button>
+						</div>
+						<ol class="content">
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+						</ol>
+					</div>
 
 					<script src="./js/jquery-3.3.1.min.js"> </script>
-					<script language="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" async"async""">
-					</script>
-			  	<ins class="adsbygoogle"
-			     style="display:inline-block;width:120px;height:240px"
-			     data-ad-client="ca-pub-9454932042094762"
-			     data-ad-slot="6588600848"></ins>
-			  		<script>
-						(adsbygoogle = window.adsbygoogle || []).push({});
-						</script>
-
+					<script src="./js/script.js"></script>
 		</body>
 	</html>
