simple slideshow now working on commissions page

--- a/commissions.html
+++ b/commissions.html
@@ -46,10 +46,9 @@
 							</button>
 						</div>
 						<ol class="content">
-							<li>1</li>
-							<li>2</li>
-							<li>3</li>
-							<li>4</li>
+							<li><img src="Thumbs/Commissions/animalblue.jpg"/></li>
+							<li><img src="Thumbs/Commissions/blue octo.jpg"/></li>
+							<li><img src="Thumbs/Commissions/Facehugger2.jpg"/></li>
 						</ol>
 					</div>
 
