Slideshow alignment, added container and background

--- a/commissions.html
+++ b/commissions.html
@@ -35,21 +35,14 @@
 					<p class="welcome">Quite often your designs find their way into
             our range.  Below are images of some of our commissions to date.
 					</p>
-
-          <div class="carouselbox active">
-						<div class="buttons">
-							<button class="prev">
-								<span class="offscreen">Previous</span>
-							</button>
-							<button class="next">
-								<span class="offscreen">Next</span>
-							</button>
+					<div class="carouselContainer">
+          	<div class="carouselbox active">
+							<ol class="content">
+								<li><img src="Thumbs/Commissions/animalblue.jpg"/></li>
+								<li><img src="Thumbs/Commissions/blue octo.jpg"/></li>
+								<li><img src="Thumbs/Commissions/Facehugger2.jpg"/></li>
+							</ol>
 						</div>
-						<ol class="content">
-							<li><img src="Thumbs/Commissions/animalblue.jpg"/></li>
-							<li><img src="Thumbs/Commissions/blue octo.jpg"/></li>
-							<li><img src="Thumbs/Commissions/Facehugger2.jpg"/></li>
-						</ol>
 					</div>
 
 					<script src="./js/jquery-3.3.1.min.js"> </script>
