Re-did carousel on products page to use json file

--- a/commissions.html
+++ b/commissions.html
@@ -35,6 +35,13 @@
 					<p class="welcome">Quite often your designs find their way into
             our range.  Below are images of some of our commissions to date.
 					</p>
+
+				</div>
+
+					<div class="commissions">
+				  </div>
+
+					 <!--
 					<div class="carouselContainer">
           	<div class="carouselbox active">
 							<ol class="content">
@@ -44,6 +51,7 @@
 							</ol>
 						</div>
 					</div>
+				-->
 
 					<script src="./js/jquery-3.3.1.min.js"> </script>
 					<script src="./js/script.js"></script>
