--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" content="text/html">
     <title>Happy Hats Home Page</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="./js/jquery-3.3.1.min.js"></script>
   </head>
 
   <body>
@@ -23,6 +21,31 @@
       <img src="./Buttons/aabanner2.jpg" id="banner">
     </div>
 
+    <form>
+        <fieldset>
+          <div>
+            <legend>Contact us</legend>
+          </div>
+          <div>
+            <label>Name</label>
+            <input name="name" type="text" placeholder="Your name">
+          </div>
+          <div>
+            <label>Your email</label>
+            <input name="email" type="text" placeholder="Your email">
+          </div>
+          <div>
+            <label>Your message</label>
+            <textarea name="message" type="text" placeholder="Please enter your message here" rows="5"></textarea>
+          </div>
+          <div>
+            <button type="submit">Submit</button>            
+          </div>
+        </fieldset>
+    </form>
+
+    <!--
+
     <div class="container">
 	<div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -31,7 +54,7 @@
           <fieldset>
             <legend class="text-center">Contact us</legend>
 
-            <!-- Name input-->
+            <!-- Name input
             <div class="form-group">
               <label class="col-md-3 control-label" for="name">Name</label>
               <div class="col-md-9">
@@ -39,7 +62,7 @@
               </div>
             </div>
 
-            <!-- Email input-->
+            <!-- Email input
             <div class="form-group">
               <label class="col-md-3 control-label" for="email">Your E-mail</label>
               <div class="col-md-9">
@@ -47,7 +70,7 @@
               </div>
             </div>
 
-            <!-- Message body -->
+            <!-- Message body
             <div class="form-group">
               <label class="col-md-3 control-label" for="message">Your message</label>
               <div class="col-md-9">
@@ -55,7 +78,7 @@
               </div>
             </div>
 
-            <!-- Form actions -->
+            <!-- Form actions
             <div class="form-group">
               <div class="col-md-12 text-right">
                 <button type="submit" class="btn btn-primary btn-lg">Submit</button>
@@ -67,6 +90,7 @@
       </div>
 	</div>
 </div>
+-->
   </body>
 
 </html>
