Finished styling on contact form. Left room for upcoming events

--- a/contact.html
+++ b/contact.html
@@ -22,24 +22,24 @@
     </div>
 
     <form>
-        <fieldset>
-          <div>
-            <legend>Contact us</legend>
+        <fieldset class="contactFormOverallContainer">
+          <div class="contactLegendContainer">
+            <legend class="contactLegend">Contact us</legend>
           </div>
           <div>
             <label>Name</label>
-            <input name="name" type="text" placeholder="Your name">
+            <input class="contactInputBox1" name="name" type="text" placeholder="Your name">
           </div>
           <div>
             <label>Your email</label>
-            <input name="email" type="text" placeholder="Your email">
+            <input class="contactInputBox2" name="email" type="text" placeholder="Your email address">
           </div>
           <div>
-            <label>Your message</label>
-            <textarea name="message" type="text" placeholder="Please enter your message here" rows="5"></textarea>
+            <label class="fiddlyText">Your message</label>
+            <textarea class="contactInputBox3" name="message" type="text" placeholder="Please enter your message here" rows="5"></textarea>
           </div>
           <div>
-            <button type="submit">Submit</button>            
+            <button class="contactSubmitButton" type="submit">Submit</button>
           </div>
         </fieldset>
     </form>
