Completed upcoming events section and styling

--- a/contact.html
+++ b/contact.html
@@ -21,35 +21,63 @@
       <img src="./Buttons/aabanner2.jpg" id="banner">
     </div>
 
-    <form>
-        <fieldset class="contactFormOverallContainer">
-          <div class="contactLegendContainer">
-            <legend class="contactLegend">Contact us</legend>
-          </div>
-          <div>
-            <label>Name</label>
-            <input class="contactInputBox1" name="name" type="text" placeholder="Your name">
-          </div>
-          <div>
-            <label>Your email</label>
-            <input class="contactInputBox2" name="email" type="text" placeholder="Your email address">
-          </div>
-          <div>
-            <label class="fiddlyText">Your message</label>
-            <textarea class="contactInputBox3" name="message" type="text" placeholder="Please enter your message here" rows="5"></textarea>
-          </div>
-          <div>
-            <button class="contactSubmitButton" type="submit">Submit</button>
-          </div>
-        </fieldset>
-    </form>
+    <p class="welcomeContainer welcome">Use the form below to get in touch with us with
+      us or alternatively come and find us at any of the upcoming events listed
+      below.</p>
 
-    <div>
-      <legend><img src="ContactGraphics/calendar.png">Find Us - Upcoming Events</legend>
+    <div class="contactAndEventsContainer">
 
+      <form>
+          <fieldset class="contactFormOverallContainer">
+            <div class="contactLegendContainer">
+              <legend class="contactLegend">Contact us</legend>
+            </div>
+            <div>
+              <label>Name</label>
+              <input class="contactInputBox1" name="name" type="text" placeholder="Your name">
+            </div>
+            <div>
+              <label>Your email</label>
+              <input class="contactInputBox2" name="email" type="text" placeholder="Your email address">
+            </div>
+            <div>
+              <label class="fiddlyText">Your message</label>
+              <textarea class="contactInputBox3" name="message" type="text" placeholder="Please enter your message here" rows="5"></textarea>
+            </div>
+            <div>
+              <button class="contactSubmitButton" type="submit">Submit</button>
+            </div>
+          </fieldset>
+        </form>
 
-    </div>
-
+        <div class="eventContainer">
+          <legend class="eventTitle">Upcoming Events</legend>
+          <div class="event event1">
+            <img src="ContactGraphics/WalkerStalker">
+            <a href="https://walkerstalkercon.com/london/">Walker Stalker</a>
+            <p class="date">30th-31st March</p>
+            <p class="venue">ExCel London, Royal Victoria Dock, 1 Western Gateway, Royal Docks, London E16 2XL</p>
+          </div>
+          <div class="event event2">
+            <img src="ContactGraphics/Elstree-Con">
+            <a href="https://www.starwarscon.co.uk/">Star Wars Con</a>
+            <p class="date">6th April 2019</p>
+            <p class="venue">Allum Manor House & Hall, 2 Allum Lane, Borehamwood WD6 3PJ</p>
+          </div>
+          <div class="event event1">
+            <img src="ContactGraphics/BedfordWho.jpeg">
+            <a href="http://bedfordwhocharitycon.co.uk/">Bedford Who</a>
+            <p class="date">13th April 2019</p>
+            <p class="venue">The Theatre, University of Bedfordshire, Polhil Avenue, Bedford MK41 9EA</p>
+          </div>
+          <div class="event event2">
+            <img src="ContactGraphics/ThamesCon.png">
+            <a href="https://thamescon.co.uk/">Thames Con</a>
+            <p class="date">28th April 2019</p>
+            <p class="venue">Abingdon & Whitney College, Abingdon Campus, Wootton Road, Abingdon OX14 1GG</p>
+          </div>
+      </div>
+    </div >
 
   </body>
 
